--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "version": "1.3.0-beta.5",
   "dependencies": {
     "discord.js": "^11.3.0",
+    "express": "^4.16.4",
+    "express-glitch-keepalive": "^0.2.0",
     "fstorm": "^0.1.3",
     "jimp": "^0.2.28",
-	"express-glitch-keepalive": "^0.2.0",
-	"express": "^4.16.4"
+    "node-google-translate-skidz": "^1.1.2"
   }
 }
